# grpc-client-server-tcp-vsock

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  client-config.toml  prd.md  prd_rust-grpc-client-server-tcp-vsock.md  prompts.md  run_tests.sh  server-config.toml  tasks.md  todo.md
.kilocode/rules/memory-bank/: architecture.md  brief.md  context.md  product.md  tasks.md  tech.md
examples/: transport_demo.rs
grpc-client/: Cargo.toml
grpc-client/src/: config.rs  error.rs  main.rs
grpc-client/src/client/: grpc_client.rs  mod.rs  tests.rs
grpc-server/: Cargo.toml
grpc-server/src/: main.rs
grpc-shared/: Cargo.toml  PROTOCOL_BUFFERS.md  build.rs
grpc-shared/examples/: proto_example.rs
grpc-shared/proto/: signing.proto
grpc-shared/src/: lib.rs
grpc-shared/src/benchmarks/: mod.rs  rpc_benchmark.rs
grpc-shared/src/client/: connection.rs  grpc_client.rs  mod.rs
grpc-shared/src/config/: mod.rs  settings.rs
grpc-shared/src/crypto/: keys.rs  mod.rs  signing.rs  tests.rs
grpc-shared/src/error/: mod.rs  types.rs
grpc-shared/src/proto/: mod.rs  signing.rs  tests.rs
grpc-shared/src/server/: crypto.rs  grpc_server.rs  mod.rs  tests.rs  transport.rs
grpc-shared/src/transport/: mod.rs  tcp.rs  tests.rs  vsock.rs
proto/: crypto.proto  echo.proto
src/: lib.rs  transport.rs  transport_channel.rs
tests/: integration_test.rs  integration_tests.rs  performance_tests.rs
