[package]
name = "grpc-performance-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "grpc_server"
path = "src/bin/server.rs"

[[bin]]
name = "grpc_client"
path = "src/bin/client.rs"

[[bin]]
name = "grpc_benchmark"
path = "src/bin/benchmark.rs"

[[bin]]
name = "cpu_monitor"
path = "src/bin/cpu_monitor.rs"

[[example]]
name = "transport_demo"
path = "examples/transport_demo.rs"

[dependencies]
tonic = "0.13"
prost = "0.13"
tokio = { version = "1.46", features = ["macros", "rt-multi-thread", "time"] }
log = "0.4"
env_logger = "0.11"
thiserror = "2.0"
http = "1.3"
ring = "0.17"
rsa = "0.9"
vsock = "0.5"
tokio-vsock = "0.7"
hyper = { version = "1.6", features = ["full", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tower = "0.5"
async-trait = "0.1"
futures-core = "0.3"
clap = { version = "4.5", features = ["derive"] }
num_cpus = "1.17"
sysinfo = "0.36" # for CPU monitor
deadpool = "0.12" # High-performance async connection pooling
deadpool-runtime = "0.1" # Runtime support for deadpool

[build-dependencies]
tonic-build = "0.13"

[dev-dependencies]
tokio-test = "0.4"
